adding docker container using hyperCalls to encrypt alert messages